# terpol

./: Cargo.toml  README.md  config.example.yaml
.github/workflows/: release.yml
docs/plans/: 2026-03-01-network-latch-design.md  2026-03-01-network-latch-implementation.md
src/: lib.rs  main.rs
src/cli/: domain.rs  mod.rs  rule.rs  secret.rs
src/config/: mod.rs  types.rs
src/engine/: leak.rs  mod.rs  rules.rs  scanner.rs
src/proxy/: handler.rs  mod.rs  server.rs  system_proxy.rs  tls.rs
src/vault/: encrypted_file.rs  mod.rs
tests/: proxy_integration.rs
